# LastOne.init

./: .gitignore  README.md  package.json
.initia/: submission.json
contracts/lastone/: Cargo.toml
contracts/lastone/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AICommentator.tsx  Arena.tsx  BridgeDeposit.tsx  ConnectWallet.tsx  Countdown.tsx  EntryFeed.tsx  HowItWorks.tsx  Leaderboard.tsx  PotDisplay.tsx  RevenueStats.tsx  RoundHistory.tsx  UserProfile.tsx
frontend/src/hooks/: useCountdown.ts  useGameState.ts  useLeaderboard.ts  useSessionKey.ts  useWallet.ts
frontend/src/lib/: ai-commentator.ts  constants.ts  contract.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: deploy.sh  seed-round.sh
